Fixed vertical align bug

--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,12 @@ p {
     background: #D9CB9E;
 }
 
-.intro-text{
-	min-height: 100%;
-	min-height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+.vcenter {
+	position: relative;
+  	top: 50%;
+  	-webkit-transform: translateY(-50%);
+  	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
 }
 
 .intro-text .name {
